--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 	  <li><a routerLink = "/contact">Contact US</a></li>
     </ul>
 	<ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-out" (click)="logOut()"></span>Log Out</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-out" (click)="logOut()">Log Out</span></a></li>
       </ul>
     
   </div>
